# Enhanced-Cloudscapes

./: .gitignore  CMakeLists.txt  Makefile  README.md
Enhanced Cloudscapes/shaders/post_processing/: fragment_shader.glsl
Enhanced Cloudscapes/shaders/rendering/: fragment_shader.glsl  vertex_shader.glsl
Enhanced_Cloudscapes/64/: lin.xpl
Enhanced_Cloudscapes/shaders/post_processing/: vertex_shader.glsl
Enhanced_Cloudscapes/shaders/rendering/: vertex_shader.glsl
include/: dataref_helpers.hpp  opengl_helpers.hpp  plugin_objects.hpp  post_processing_program.hpp  rendering_program.hpp  simulator_objects.hpp
src/: dataref_helpers.cpp  enhanced_cloudscapes.cpp  opengl_helpers.cpp  plugin_objects.cpp  post_processing_program.cpp  rendering_program.cpp  simulator_objects.cpp
